[gd_scene load_steps=13 format=2]

[ext_resource path="res://scn/xor_button.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/XOR_Riddle.gd" type="Script" id=2]
[ext_resource path="res://scn/xor_light.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/mat_depth.shader" type="Shader" id=4]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 4 )
shader_param/u_col = Color( 0.172549, 1, 0, 1 )
shader_param/u_far = 1000.0
shader_param/u_dist_correction = 0.1

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 4 )
shader_param/u_col = Color( 0.172549, 1, 0, 1 )
shader_param/u_far = 1000.0
shader_param/u_dist_correction = 0.1

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 4 )
shader_param/u_col = Color( 0.172549, 1, 0, 1 )
shader_param/u_far = 1000.0
shader_param/u_dist_correction = 0.1

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 4 )
shader_param/u_col = Color( 0.172549, 1, 0, 1 )
shader_param/u_far = 1000.0
shader_param/u_dist_correction = 0.1

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 4 )
shader_param/u_col = Color( 0.172549, 1, 0, 1 )
shader_param/u_far = 1000.0
shader_param/u_dist_correction = 0.1

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 4 )
shader_param/u_col = Color( 0.172549, 1, 0, 1 )
shader_param/u_far = 1000.0
shader_param/u_dist_correction = 0.1

[sub_resource type="ShaderMaterial" id=7]
shader = ExtResource( 4 )
shader_param/u_col = Color( 0.172549, 1, 0, 1 )
shader_param/u_far = 1000.0
shader_param/u_dist_correction = 0.1

[sub_resource type="ShaderMaterial" id=8]
shader = ExtResource( 4 )
shader_param/u_col = Color( 0.172549, 1, 0, 1 )
shader_param/u_far = 1000.0
shader_param/u_dist_correction = 0.1

[node name="XOR_Riddle" type="Spatial"]
script = ExtResource( 2 )

[node name="xor_button_1" parent="." instance=ExtResource( 1 )]

[node name="xor_button_2" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 0 )

[node name="xor_button_3" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, 0 )

[node name="xor_button_4" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 3, 0 )

[node name="xor_button_5" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 3, 0 )

[node name="xor_button_6" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 3, 0 )

[node name="xor_button_7" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 3, 0 )

[node name="xor_light_1" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.55152, 8.87388, -1 )
material/0 = SubResource( 1 )

[node name="xor_light_2" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 6.87022, -1 )
material/0 = SubResource( 2 )

[node name="xor_light_3" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10.064, 6, -1 )
material/0 = SubResource( 3 )

[node name="xor_light_4" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.11936, 12.0212, -1 )
material/0 = SubResource( 4 )

[node name="xor_light_5" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 12.3359, -1 )
material/0 = SubResource( 5 )

[node name="xor_light_6" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 14.333, -1 )
material/0 = SubResource( 6 )

[node name="xor_light_7" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10.6834, 7.78053, -1 )
material/0 = SubResource( 7 )

[node name="xor_light_8" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -13.6779, 11.9042, -1 )
material/0 = SubResource( 8 )
